[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/music_control.gd" type="Script" id=1]
[ext_resource path="res://textures/vignette.png" type="Texture" id=3]
[ext_resource path="res://fonts/PastiRegular-mLXnm.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="MusicControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )

[node name="Image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 1

[node name="Darker" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )

[node name="Waves" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 508.0
margin_bottom = -67.0
alignment = 1

[node name="0" type="ColorRect" parent="Waves"]
margin_left = 635.0
margin_right = 645.0
margin_bottom = 145.0
rect_min_size = Vector2( 10, 0 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="Vignette" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="TrackLength" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.0
margin_top = 168.0
margin_right = 254.0
margin_bottom = 170.0

[node name="Current" type="ColorRect" parent="TrackLength"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 506.0
margin_top = -4.0
margin_right = 508.0
margin_bottom = 4.0

[node name="LengthTextCurrent" type="Label" parent="."]
margin_left = 384.0
margin_top = 537.0
margin_right = 428.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 1 )
text = "00:00"

[node name="LengthTextTarget" type="Label" parent="."]
margin_left = 439.0
margin_top = 537.0
margin_right = 483.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 2 )
text = "00:00"

[node name="DarkBlend" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
